<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textViewTitleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/mainstockname"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textViewTitleTotalProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/mainpl"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textViewnowprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/maintradeprice"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
        <com.hwy.stock.library.PullToRefreshExpandableListView
            android:id="@+id/StockExListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/textViewttamountt"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewTitleName"
            android:background="@drawable/shape" />

        <TextView
            android:id="@+id/textViewTitleChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewnowprice"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/textViewnowprice"
            android:gravity="center"
            android:text="@string/mainchange"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textViewttlprofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewttamountt"
            android:layout_alignBottom="@+id/textViewttamountt"
            android:layout_alignParentRight="true"
            android:text="0"
			android:paddingLeft="5dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textViewttamountt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewttamountt"
            android:layout_alignBottom="@+id/textViewttamountt"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="50dip"
            android:paddingRight="5dip"
            android:text="@string/mainttlcaptial"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textViewloading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewttlprofit"
            android:layout_alignBottom="@+id/textViewttlprofit"
            android:layout_alignRight="@+id/textViewTitleChange"
            android:text="@string/mainload"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewttamount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewttamountt"
            android:layout_alignBottom="@+id/textViewttamountt"
            android:layout_toRightOf="@+id/textViewttamountt"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="invisible" />

</RelativeLayout>